# lab_DB

./: CMakeLists.txt  globals.h  index.cpp  index.h  index_slave.cpp  index_slave.h  main.cpp  master_quarter.cpp  master_quarter.h  slave_department.cpp  slave_department.h
