cmake_minimum_required(VERSION 3.25)
project(lab_DB)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab_DB main.cpp index.h index.cpp index.cpp index.cpp globals.h index_slave.h index_slave.cpp index_slave.cpp master_quarter.h master_quarter.cpp master_quarter.cpp slave_department.h slave_department.cpp slave_department.cpp)
